<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConnectionSignUpFragment"
    android:background="@drawable/login_gradient_background"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_signup_screen_arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow" />

    <FrameLayout
        android:id="@+id/fl_signup_screen"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/login_screen_login_popup"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_signup_screen_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:backgroundTint="@color/start_bg"
                android:hint="@string/enter_pseudo"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/start_bg"
                android:textColorHint="@color/start_bg"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_screen_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/start_bg"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/start_bg"
                android:textColorHint="@color/start_bg"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_signup_screen_pseudo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_screen_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_screen_signup_btn"
        android:contentDescription="@string/login_btn"
        android:text="@string/signup_btn"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_signup_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup_screen_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup_screen_signup"
        tools:layout_editor_absoluteX="56dp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_screen_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_screen_login_btn"
        android:contentDescription="@string/login_btn"
        android:text="@string/login_btn"
        android:textColor="@color/start_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>