<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_login_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient_background"
    tools:context=".ConnectionActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_screen_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_login_screen_wrong_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_screen_wrong_login"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/wrong_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fl_signup_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fl_signup_screen"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/login_screen_login_popup"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup_screen_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:visibility="visible"
        android:padding="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_signup_screen_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/start_bg"
                android:hint="@string/enter_pseudo"
                android:inputType="text"
                android:textColorHint="@color/start_bg"
                android:textColor="@color/start_bg"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="username"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/et_signup_screen_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/start_bg"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorHint="@color/start_bg"
                android:textColor="@color/start_bg"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_signup_screen_pseudo"
                android:autofillHints="password"
                android:maxLength="20"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_screen_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_screen_login_btn"
        android:contentDescription="@string/login_btn"
        android:text="@string/login_btn"
        android:textColor="@color/start_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_screen_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_screen_signup_btn"
        android:contentDescription="@string/login_btn"
        android:text="@string/signup_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>